fix: text aligned

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -136,6 +136,7 @@
     transition: transform .4sease-in-out;
 }
 @media only screen and (max-width: 768px) {
+    
     .container{
         margin: 0;
     }
@@ -145,6 +146,7 @@
         border-radius: 0%;
         box-sizing: border-box;
         padding: 15px;
+       
       
     }
     .header-link{
@@ -170,6 +172,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; */
+    align-items: flex-start;
     box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.3);
     
 }
